--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto: 100,200,300,400,500,600,700|Exo: 100,200,300,400,500,600,700&display=swap');
+
 /*Navigation section*/
 
 .logo {
@@ -10,9 +11,17 @@
 
 /*header section*/
 
+.banner h2 {
+    color: rgb(255, 255, 255);
+}
+
+.banner p {
+    color: rgb(255, 255, 255);
+}
+
 .banner { 
     width: 100%;
-	height: 38rem;
+	height: 30rem;
 	background: url("../images/banner/cover-image.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
@@ -20,10 +29,24 @@
 	background-attachment: scroll;
 }
 
-.banner h2 {
-    color: rgb(255, 255, 255);
+.banner {
+    animation-name: hero-zoom;
+    animation-duration: 2s;
+    animation-fill-mode: backwards;
 }
 
-.banner p {
-    color: rgb(255, 255, 255);
+#banner-out {
+    width: 100%;
+    height: 30rem;
+    overflow:hidden;
+    position: relative;
+}
+
+@keyframes hero-zoom {
+    from{
+        transform: scale(1.2);
+    }
+    to{
+        transform: scale(1);
+    }
 }
