--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,10 @@
 }
 
 .banner p {
-    color: rgb(32, 5, 153);
-    text-align: center;
+    color: rgb(11, 125, 255);
+    text-align: right;
+    text-emphasis: unset;
+    text-rendering: geometricPrecision;
 }
 
 .banner {
