--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 .banner { 
     width: 100%;
 	height: 30rem;
-	background: url("../images/banner/cover-image.jpg");
+	background: url("https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -22,16 +22,8 @@
 
 .banner h2 {
     color: rgb(147, 66, 245);
-    text-align: center;
-    padding-top: 10rem;
-    
-}
-
-.banner p {
-    color: rgb(11, 125, 255);
     text-align: right;
-    text-emphasis: unset;
-    text-rendering: geometricPrecision;
+    padding: 5rem;
 }
 
 .banner {
