--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,56 @@ body {
 	background-attachment: scroll;
 }
 
+.cheddar-banner {
+    width: 100%;
+	height: 30rem;
+	background: url("https://images.pexels.com/photos/3969285/pexels-photo-3969285.jpeg?cs=srgb&dl=cheddar-gorge-3969285.jpg&fm=jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	background-attachment: scroll;
+}
+
+.blagdon-banner {
+    width: 100%;
+	height: 30rem;
+	background: url("https://upload.wikimedia.org/wikipedia/commons/a/ac/Blagdon_and_chew_from_air_arp.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	background-attachment: scroll;
+}
+
+.cleeve-banner {
+    width: 100%;
+	height: 30rem;
+	background: url("https://upload.wikimedia.org/wikipedia/commons/7/79/The_Malverns_from_Cleeve_Hill_%284966%29.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	background-attachment: scroll;
+}
+
+.weston-banner {
+    width: 100%;
+	height: 30rem;
+	background: url("https://www.discoverclevedon.co.uk/wp-content/uploads/2019/03/Clevedon-21.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	background-attachment: scroll;
+}
+
+.coastal-banner {
+    width: 100%;
+	height: 30rem;
+	background: url("https://live.staticflickr.com/7433/13432939784_6087d5241b_b.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	background-attachment: scroll;
+}
+
 .banner h6 {
     color: rgba(241, 255, 41, 0.904);
     text-emphasis: initial;
