Add animation trail zoom to results page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 
 /*header section*/
 
-.banner .container { 
+.banner { 
     width: 100%;
 	height: 30rem;
 	background: url("https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg");
@@ -32,7 +32,7 @@ body {
     animation-fill-mode: backwards;
 }
 
-.banner-outer {
+#banner-outer {
     width: 100%;
     height: 30rem;
     overflow:hidden;
@@ -56,7 +56,7 @@ body {
 
 /*cheddar banner*/
 
-.cheddar-banner .container {
+.cheddar-banner {
     width: 100%;
 	height: 30rem;
 	background: url("https://images.pexels.com/photos/3969285/pexels-photo-3969285.jpeg?cs=srgb&dl=cheddar-gorge-3969285.jpg&fm=jpg");
@@ -72,7 +72,7 @@ body {
     animation-fill-mode: backwards;
 }
 
-.banner-outer {
+#banner-outer {
     width: 100%;
     height: 30rem;
     overflow:hidden;
@@ -90,7 +90,7 @@ body {
 
 /*blagdon banner*/
 
-.blagdon-banner .container {
+.blagdon-banner {
     width: 100%;
 	height: 30rem;
 	background: url("https://upload.wikimedia.org/wikipedia/commons/b/b7/Blagdonlake2.jpg");
@@ -106,7 +106,7 @@ body {
     animation-fill-mode: backwards;
 }
 
-.banner-outer {
+#banner-outer {
     width: 100%;
     height: 30rem;
     overflow:hidden;
@@ -124,7 +124,7 @@ body {
 
 /*cleeve banner*/
 
-.cleeve-banner .container {
+.cleeve-banner {
     width: 100%;
 	height: 30rem;
 	background: url("https://upload.wikimedia.org/wikipedia/commons/7/79/The_Malverns_from_Cleeve_Hill_%284966%29.jpg");
@@ -158,17 +158,17 @@ body {
 
 /*weston banner*/
 
-.weston-banner .container {
+.weston-banner {
     width: 100%;
 	height: 30rem;
-	background: url("https://www.discoverclevedon.co.uk/wp-content/uploads/2019/03/Clevedon-21.jpg");
+	background: url("https://upload.wikimedia.org/wikipedia/commons/2/21/Stokeleigh_Camp_in_Leigh_Woods.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	background-attachment: scroll;
 }
 
-.weston-banner {
+#weston-banner {
     animation-name: trail-zoom;
     animation-duration: 2s;
     animation-fill-mode: backwards;
@@ -192,7 +192,7 @@ body {
 
 /*coastal banner*/
 
-.coastal-banner .container {
+.coastal-banner {
     width: 100%;
 	height: 30rem;
 	background: url("https://live.staticflickr.com/7433/13432939784_6087d5241b_b.jpg");
@@ -208,7 +208,7 @@ body {
     animation-fill-mode: backwards;
 }
 
-.banner-outer {
+#banner-outer {
     width: 100%;
     height: 30rem;
     overflow:hidden;
