Update navigation htmls& css styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,27 +11,45 @@ body {
 .logo {
     height: 3rem;
     width: 3rem;
+    margin-right: 5rem;
     border-radius: 1rem;
-    margin-right: 1rem;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: rgb(255, 255, 255);
+}
+
+.navbar a {
+  color: rgba(50, 168, 88);
+  text-decoration: none;
+}
+
+.navbar a {
     margin-left: 1rem;
+    padding-top: 1.2rem;
+    padding-bottom: 1.5rem;
+    padding-right: 0.1rem;
+    padding-left: 0.1rem; 
 }
 
-nav a {
-    text-decoration: none;
+.navbar a:hover {
+    background-color: rgb(217, 252, 228);
 }
 
-.nav-somerset {
-    margin-right: 1rem;
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-#navbarDropdownMenuLink {
-    font-style: italic;
+.sticky + .content {
+  padding-top: 5rem;
 }
 
-#nav-trail {
+.trail {
     font-size: 1.2rem;
-    margin-top: 0.2rem;
-    margin-left: 2rem;
+    font-style: italic;
 }
 
 /*header section*/
