Add nav.js for navigation responsiveness& dropdown feature

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,16 @@ body {
   }
 }
 
+.topnav .sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
+}
+
 /*header section*/
 
 .banner { 
