--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto: 100,200,300,400,500,600,700|Exo: 100,200,300,400,500,600,700&display=swap');
 
+/*logo*/
+
+.logo {
+    width: 3rem;
+    height: 3rem;
+}
+
 /*body*/
 
 body {
@@ -7,13 +14,6 @@ body {
 }
 
 /*Navigation section*/
-
-.logo {
-    height: 3rem;
-    width: 3rem;
-    margin-right: 5rem;
-    border-radius: 1rem;
-}
 
 .topnav {
   background-color: #333;
@@ -93,50 +93,9 @@ body {
   display: block;
 }
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child), .dropdown .dropbtn {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
+/*header*/
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .topnav.responsive .dropdown {float: none;}
-  .topnav.responsive .dropdown-content {position: relative;}
-  .topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-}
-
-.topnav .sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.sticky + .content {
-  padding-top: 60px;
-}
-
-/*header section*/
-
-.banner { 
+.banner {
     width: 100%;
 	height: 30rem;
 	background: url("https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg");
@@ -157,15 +116,6 @@ body {
     height: 30rem;
     overflow:hidden;
     position: relative;
-}
-
-@keyframes trail-zoom {
-    from{
-        transform: scale(1.1);
-    }
-    to{
-        transform: scale(1);
-    }
 }
 
 /*cheddar banner*/
