--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,18 +5,19 @@
 .logo {
     width: 3rem;
     height: 3rem;
+    border-style: 1rem;
 }
 
 /*body*/
 
 body {
-    background-color: rgba(2, 1, 1, 0.904)
+    background-color: rgba(2, 1, 1, 0.904);
 }
 
 /*Navigation section*/
 
 .topnav {
-  background-color: #333;
+  background-color: rgba(2, 1, 1, 0.904);
   overflow: hidden;
 }
 
@@ -24,17 +25,17 @@ body {
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: rgb(250, 255, 255);
   text-align: center;
-  padding: 14px 16px;
+  padding: 2rem;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 2rem;
 }
 
 /* Add an active class to highlight the current page */
 .active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: rgb(2, 194, 62);
+  color: rgb(255, 255, 255);
 }
 
 /* Hide the link that should open and close the topnav on small screens */
@@ -46,47 +47,46 @@ body {
 .dropdown {
   float: left;
   overflow: hidden;
+  font-style: italic;
 }
 
 /* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
-  font-size: 17px;
+  font-size: 2rem;
   border: none;
   outline: none;
-  color: white;
-  padding: 14px 16px;
+  color: rgb(255, 255, 255);
+  padding: 2rem;
+  text-align: center;
   background-color: inherit;
-  font-family: inherit;
-  margin: 0;
 }
 
-/* Style the dropdown content (hidden by default) */
+/* Style the dropdown content*/
 .dropdown-content {
   display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  position: relative;
+  background-color: rgb(255, 255, 255);
+  min-width: 40rem;
+  z-index: 99;
 }
 
 .dropdown-content a {
   float: none;
-  color: black;
+  color: rgb(2, 1, 1, 0.904);
   padding: 1rem;
   text-decoration: none;
   display: block;
-  text-align: left;
+  text-align: center;
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
+  background-color: rgb(166, 171, 167);
+  color: rgb(255, 255, 255);
 }
 
 .dropdown-content a:hover {
   background-color: #ddd;
-  color: black;
+  color: rgba(2, 1, 1, 0.904);
 }
 
 .dropdown:hover .dropdown-content {
