--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 /*body*/
 
 body {
-    background-color: rgba(2, 1, 1, 0.904);
+    background-color: rgb(255, 255, 255);
 }
 
 /*Navigation section*/
