--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,55 +318,76 @@ h6 {
     font-style: italic;
 }
 
-/*slide show section*/
+/*slideshow*/
 
-/*container styling*/
+.mySlides {display: none;}
+img {vertical-align: middle;}
 
-.container .slide {
-	width: 100%;
-    text-align: center;
-	overflow: hidden;
+/* Slideshow container */
+.slideshow-container {
+  max-width: 62.5rem;
+  position: relative;
+  margin: auto;
+  border
 }
 
-.slider-inner{
-	width: 55rem;
-	height:30rem;
-	position:relative;
-	overflow:hidden;
-    text-align: center;
-	float: left;
-	padding: 0.1rem;
-	border: rgba(2, 1, 1, 0.904) solid 0.3rem;
+/* Caption text */
+
+.text {
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  padding: 1rem 1rem;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
 }
 
-.slider-inner img{
-	display:none;
-	width: 55rem;
-	height: 30rem;
-    text-align: center;
+/* Number text (1/3 etc) */
+.numbertext {
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  padding: 1rem 1rem;
+  position: absolute;
+  top: 0;
 }
 
-.slider-inner img.active{
-    text-align: center;
-	display:inline-block;
+/* The dots/bullets/indicators */
+.dot {
+  height: 1rem;
+  width: 1rem;
+  margin: 0 0.13rem;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-.prev,.next{
-	float:left;
-	margin-top: 10rem;
-	cursor: pointer;
+.active {
+  background-color: rgb(166, 171, 167);
 }
 
-.prev{
-	position:relative;
-	margin-right: -100rem;
-	z-index:100;
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 2.5s;
+  animation-name: fade;
+  animation-duration: 2.5s;
 }
 
-.next{
-	position:relative;
-	margin-left: -3.7rem;
-	z-index:100;
+@-webkit-keyframes fade {
+  from {opacity: .8} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .8} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 1rem) {
+  .text {font-size: 1rem}
 }
 
 /*Maps section*/
@@ -378,7 +399,7 @@ h6 {
     height: auto;
 }
 
-/*cheddar gorge*/
+/*cheddar gorge
 
 .cheddar-map {
     padding-top: 10rem;
