--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,17 +318,27 @@ h6 {
     font-style: italic;
 }
 
+/*Gallery introduction*/
+
+.slide-intro h2 {
+    color: rgb(2, 194, 62);
+}
+
+.slide-intro p {
+    font-style: italic;
+}
+
 /*slideshow*/
 
 .mySlides {display: none;}
 img {vertical-align: middle;}
 
 /* Slideshow container */
+
 .slideshow-container {
   max-width: 62.5rem;
   position: relative;
   margin: auto;
-  border
 }
 
 /* Caption text */
@@ -343,7 +353,7 @@ img {vertical-align: middle;}
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
+/* Number text (1/6) */
 .numbertext {
   color: rgb(255, 255, 255);
   font-size: 1rem;
@@ -361,6 +371,7 @@ img {vertical-align: middle;}
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+  margin-bottom: 10rem;
 }
 
 .active {
@@ -368,6 +379,7 @@ img {vertical-align: middle;}
 }
 
 /* Fading animation */
+
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 2.5s;
@@ -386,6 +398,7 @@ img {vertical-align: middle;}
 }
 
 /* On smaller screens, decrease text size */
+
 @media only screen and (max-width: 1rem) {
   .text {font-size: 1rem}
 }
@@ -410,4 +423,92 @@ img {vertical-align: middle;}
     height: 100%;
     margin: 0;
     padding: 0;
+}
+
+/*bottom page nav*/
+
+.bottom-nav {
+  background-color: rgba(2, 1, 1, 0.904);
+  overflow: hidden;
+  margin-top: 10rem;
+  text-align: center;
+}
+
+/* Style the links inside the navigation bar */
+
+.bottom-nav a {
+  float: left;
+  display: block;
+  color: rgb(250, 255, 255);
+  text-align: right;
+  padding: 2rem;
+  text-decoration: none;
+  font-size: 2rem;
+}
+
+/* Add an active class to highlight the current page */
+
+.active {
+  background-color: rgb(2, 194, 62);
+  color: rgb(255, 255, 255);
+}
+
+/* Hide link that should open and close the dropdown on small screens*/
+
+.bottom-nav .icon {
+  display: none;
+}
+
+/*Dropdown container*/
+
+.bottom-nav .dropdown {
+    text-align: center;
+    overflow: hidden;
+    font-style: italic;
+}
+
+/*Style the dropdown button to fit*/
+
+.bottom-nav .dropdown .dropbtn {
+  font-size: 2rem;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  padding: 2rem;
+  background-color: inherit;
+}
+
+/* Style dropdown content*/
+
+.bottom-nav .dropdown-content {
+  display: none;
+  position: relative;
+  background-color: rgb(255, 255, 255);
+  min-width: 20rem;
+  z-index: 99;
+}
+
+.bottom-nav .dropdown-content a {
+  float: none;
+  color: rgb(2, 1, 1, 0.904);
+  padding: 1rem;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  font-size: 1rem;
+  font-style: italic;
+}
+
+.bottom-nav a:hover, .dropdown:hover .dropbtn {
+  background-color: rgb(166, 171, 167);
+  color: rgb(255, 255, 255);
+}
+
+.bottom-nav .dropdown-content a:hover {
+  background-color: rgb(2, 194, 62);
+  color: rgba(2, 1, 1, 0.904);
+}
+
+.bottom-nav .dropdown:hover .dropdown-content {
+  display: block;
 }
