--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,7 +361,7 @@ img {vertical-align: middle;}
   font-size: 1rem;
   padding: 1rem 1rem;
   position: absolute;
-  bottom: 8px;
+  bottom: 0.5rem;
   width: 100%;
   text-align: center;
 }
@@ -479,14 +479,13 @@ img {vertical-align: middle;}
 
 .bottom-nav .dropup-content {
     display: none;
-    top: 3.125rem;
-    bottom: 3.125rem;
+    position: absolute;
+    bottom: 3rem;
     background-color: rgb(255, 255, 255);
-    min-width: 25rem;
+    min-width: 20rem;
     box-shadow: 0rem 0.5rem 1rem 0rem rgba(0,0,0,0.2);
     z-index: 1;
     text-align: center;
-    overflow: hidden;
     font-style: italic;
 }
 
