--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,10 +333,12 @@ h6 {
 
 .slide-intro h2 {
     color: rgb(2, 194, 62);
+    text-align: center;
 }
 
 .slide-intro p {
     font-style: italic;
+    text-align: center;
 }
 
 /*slideshow section*/
@@ -447,15 +449,18 @@ img {vertical-align: middle;}
 
 /*homepage*/
 
-.home-map h2 {
+.map-text {
     font-style: italic;
     text-align: center;
     color: rgb(2, 194, 62);
 }
 
-#mapping {
+#map {
+    height: 30rem;
     width: 100%;
-    height: 100%;
+    border: 0.1rem solid rgba(2, 1, 1, 0.904);
+    padding-bottom: 6rem;
+    margin-bottom: 6rem;
 }
 
 /*cheddar gorge
@@ -495,6 +500,7 @@ img {vertical-align: middle;}
 .bottom-nav .dropbtn {
     background-color: rgb(255, 255, 255);
     color:rgba(2, 1, 1, 0.904);
+    box-shadow: 1rem 1rem rgb(2, 194, 62);
     padding: 1rem;
     font-size: 5rem;
     border: none;
