Update blagdon lake imslideshow images& add api key

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,11 +333,6 @@ p {
   margin: auto;
 }
 
-.mySlides-fade .slideshow-container img {
-    height: 10rem;
-    width: 100%;
-}
-
 .btn .container a {
     text-decoration: none;
     font-style: none;
@@ -349,11 +344,11 @@ p {
   position: absolute;
   top: 80%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -60%);
   -ms-transform: translate(-50%, -50%);
   background-color: rgb(2, 194, 62);
   color: rgb(255, 255, 255);
-  font-size: 2rem;
+  font-size: 1rem;
   padding: 0.75 1.5rem;
   border: none;
   cursor: pointer;
@@ -387,7 +382,7 @@ p {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
 }
 
 .active {
@@ -433,6 +428,7 @@ p {
     height: 30rem;
     width: 100%;
     border: 0.1rem solid rgba(2, 1, 1, 0.904);
+    box-shadow: 1rem 1rem rgb(2, 194, 62);
     padding-bottom: 6rem;
     margin-bottom: 6rem;
 }
